--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "typeface-inter": "^3.15.0",
+    "typeface-metropolis": "^0.0.74"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^1.0.0"
+    "@nuxtjs/tailwindcss": "^1.0.0",
+    "@tailwindcss/custom-forms": "^0.2.1"
   }
 }
